<resources>
    <string name="app_name">Farmer\'s App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Farmer\'s Market</string>
    <string name="menu_slideshow"><![CDATA[News & Articles]]></string>
    <string name="news_articles"><![CDATA[News & Articles]]></string>
    <string name="farmer_s_market">Farmer\'s Market</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="enter_your_email_password_to_continue">Enter your Registered Email and Password to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="to_continue_with_farmer_s_app">to continue with Farmer\'s App</string>
    <string name="sign_in">Sign In</string>
    <string name="to_provide_technology_and_services_to_farmers_merchants_and_farm_labourers_to_help_them_expand_their_business_and_provide_them_with_a_wider_market_and_to_improve_the_present_farming_processes_and_to_provide_knowledge_about_recent_agricultural_issues">To provide technology and services to farmers, merchants, and farm labourers to help them expand their business and provide them with a wider market. And to improve the present farming processes and to provide knowledge about recent agricultural issues.</string>
    <string name="visionline">To provide a helping hand to the farmers and farm labourers in improving their lives through the medium of technology, thereby, improving the Agricultural Sector in the Indian Economy.</string>
    <string name="txt1line"><b>‘Farmer\'s App\'</b> is a model farmer management Android application.</string>
    <string name="agriculture_management_system_is_to_help_farmers_by_providing_all_kinds_agriculture_related_information_in_the_website">AGRICULTURE MANAGEMENT SYSTEM IS TO HELP FARMERS BY PROVIDING ALL KINDS AGRICULTURE RELATED INFORMATION...</string>
    <string name="txt2line"><b>Farmer\'s App</b> provides a concept of virtual agricultural trade to its users.</string>
    <string name="txt3line">    It helps the wholesalers and retailers in buying produce from larger number of farmers.</string>
    <string name="log_out">Log Out</string>
    <string-array name="usertype">
        <item>BUYER</item>
        <item>PRODUCER</item>
    </string-array>
</resources>