<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myaccount"
            android:icon="@drawable/ic_action_person"
            android:title="My Account"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_action_market"
            android:title="@string/farmer_s_market" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_action_news_articles"
            android:title="@string/news_articles" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_action_contact"
            android:title="@string/contact"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/log_out"/>
    </group>
</menu>