<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.anurag.farmersportal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.anurag.farmersportal.ui.FarmerMarket.Farmer_Market_Fragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.anurag.farmersportal.ui.News_Articles.News_Articles_Fragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.anurag.farmersportal.ui.Contact.ContactFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_myaccount"
        android:name="com.anurag.farmersportal.ui.MyAccount.MyAccountFragment"
        android:label="My Account"
        tools:layout="@layout/fragment_myaccount" />
    <activity
        android:id="@+id/nav_logout"
        android:name="com.anurag.farmersportal.LoginActivity"
        android:label="@string/log_out"
        tools:layout="@layout/activity_login" />
</navigation>