<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/home">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="710dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp">
    <ImageView
        android:id="@+id/imgharvest"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/combineharvester" />
    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/agriculture_management_system_is_to_help_farmers_by_providing_all_kinds_agriculture_related_information_in_the_website"
        android:textAlignment="center"
        android:textSize="12sp" />
    <ImageView
        android:id="@+id/imgfruits"
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:fadingEdge="vertical"
        android:layout_marginTop="160dp"
        android:layout_below="@+id/text"
        android:src="@drawable/fruits"
        />
    <TextView
        android:id="@+id/txtmissionheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgfruits"
        android:text=" Mission : "
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/ic_baseline_check_circle_24"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/txtmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgfruits"
        android:textSize="18sp"
        android:layout_toRightOf="@id/txtmissionheading"
        android:text="@string/to_provide_technology_and_services_to_farmers_merchants_and_farm_labourers_to_help_them_expand_their_business_and_provide_them_with_a_wider_market_and_to_improve_the_present_farming_processes_and_to_provide_knowledge_about_recent_agricultural_issues"/>
    <TextView
        android:id="@+id/txtvisionheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtmission"
        android:text=" Vision   : "
        android:drawableStart="@drawable/ic_baseline_check_circle_24"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/txtvision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtmission"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:layout_toRightOf="@id/txtmissionheading"
        android:text="@string/visionline"/>

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvision"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_baseline_check_circle_24"
            android:text="@string/txt1line"
            android:textAlignment="center"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:drawableLeft="@drawable/ic_baseline_check_circle_24"
            android:text="@string/txt2line"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt2"
            android:drawableLeft="@drawable/ic_baseline_check_circle_24"
            android:text="@string/txt3line"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview1"
            android:layout_width="160dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="#388e3c"
            app:cardCornerRadius="15dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_below="@+id/txt3"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtcard11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="25dp"
                    android:textSize="44sp"
                    android:layout_marginLeft="60dp"
                    android:text="5"/>
                <TextView
                    android:id="@+id/txtcard1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="90dp"
                    android:textSize="13sp"
                    android:layout_marginLeft="18dp"
                    android:text="Buyer's Registered"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview2"
            android:layout_width="160dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="#388e3c"
            app:cardCornerRadius="15dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_toRightOf="@+id/cardview1"
            android:layout_below="@+id/txt3"
            android:layout_marginTop="15dp" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtcard21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="25dp"
                    android:textSize="44sp"
                    android:layout_marginLeft="60dp"
                    android:text="9"/>
                <TextView
                    android:id="@+id/txtcard2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="90dp"
                    android:textSize="13sp"
                    android:layout_marginLeft="10dp"
                    android:text="Producer's Registered"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview3"
            android:layout_width="160dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="#388e3c"
            app:cardCornerRadius="15dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_toRightOf="@+id/cardview2"
            android:layout_below="@+id/txt3"
            android:layout_marginTop="15dp" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtcard31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="25dp"
                    android:textSize="44sp"
                    android:layout_marginLeft="60dp"
                    android:text="7"/>
                <TextView
                    android:id="@+id/txtcard3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="90dp"
                    android:textSize="13sp"
                    android:layout_marginLeft="18dp"
                    android:text="Product's Available"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>



    </RelativeLayout>
    </ScrollView>
</RelativeLayout>